refactor(domain): SystemSetting using lombok